--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
 
             <!-- Tabs Links -->
             <ul class="nav nav-tabs" id="templateTabs" role="tablist">
-                <li class="nav-item">
+                <li class="nav-item" style="min-width: 150px;">
                     <a class="nav-link active" id="nav-tab-1" data-toggle="tab" href="#tab-1" role="tab"
-                       aria-controls="tab-1" aria-selected="true"><img src="/images/phone-tablet-and-laptop.png"/>Web App</a>
+                       aria-controls="tab-1" aria-selected="true"><img src="./images/devices.svg" class="fas" style="padding-right: 4px; max-width: 41px; font-size: 2rem"/><span>Web App</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="nav-tab-2" data-toggle="tab" href="#tab-2" role="tab" aria-controls="tab-2"
@@ -135,7 +135,7 @@
             </ul><!-- end of tabs links --><!-- Tabs Content-->
             <div class="tab-content" id="templateTabsContent">
 
-                <!-- Tab -->
+                <!-- Web App Tab -->
                 <div class="tab-pane fade show active" id="tab-1" role="tabpanel" aria-labelledby="tab-1">
                     <div class="container">
                         <div class="row">
@@ -226,7 +226,7 @@
                 </div> <!-- end of tab-pane -->
                 <!-- end of tab -->
 
-                <!-- Tab -->
+                <!-- Buy Tab -->
                 <div class="tab-pane fade" id="tab-2" role="tabpanel" aria-labelledby="tab-2">
                     <div class="container">
                         <div class="row">
@@ -239,42 +239,37 @@
 
                             <!-- Text And Icon Cards Area -->
                             <div class="col-lg-8">
-                                <h3>Track Result Based On Your</h3>
-                                <p class="sub-heading">After you've configured the app and settled on the data gathering
-                                    techniques you can start the information trackers and begin collecting those long
-                                    awaited interesting details.</p>
+<!--                                <h3>Localised Results</h3>-->
+<!--                                <p class="sub-heading">Search or browse items near you or easily switch to browse nationwide</p>-->
                                 <ul class="list-unstyled li-space-lg first">
                                     <li class="media">
                                             <span class="fa-stack">
                                                 <i class="fas fa-circle fa-stack-2x"></i>
-                                                <i class="fas fa-cube fa-stack-1x"></i>
+                                                <i class="fas fa-map-marker-alt fa-stack-1x"></i>
                                             </span>
                                         <div class="media-body">
-                                            <h4>Good Foundation</h4>
-                                            <p>Get a solid foundation for your self development efforts. Try Leno mobile
-                                                app now</p>
+                                            <h4>Localised Results</h4>
+                                            <p>Search or browse items near you or easily switch to browse nationwide</p>
                                         </div>
                                     </li>
                                     <li class="media">
                                             <span class="fa-stack">
                                                 <i class="fas fa-circle fa-stack-2x"></i>
-                                                <i class="fas fa-book fa-stack-1x"></i>
+                                                <i class="fas fa-filter fa-stack-1x"></i>
                                             </span>
                                         <div class="media-body">
-                                            <h4>Easy Reading</h4>
-                                            <p>Reading focus mode for long form articles, ebooks and other materials
-                                                with long text</p>
+                                            <h4>Filter</h4>
+                                            <p>Quickly filter results to find what you're looking for</p>
                                         </div>
                                     </li>
                                     <li class="media">
                                             <span class="fa-stack">
                                                 <i class="fas fa-circle fa-stack-2x"></i>
-                                                <i class="far fa-compass fa-stack-1x"></i>
+                                                <i class="fas fa-comments fa-stack-1x"></i>
                                             </span>
                                         <div class="media-body">
-                                            <h4>Goal Setting</h4>
-                                            <p>Like any self improving process, everything starts with setting goals and
-                                                comiting</p>
+                                            <h4>In-app Messaging</h4>
+                                            <p>Find something you like? Contact the seller directly from within the app</p>
                                         </div>
                                     </li>
                                 </ul>
@@ -282,34 +277,23 @@
                                     <li class="media">
                                             <span class="fa-stack">
                                                 <i class="fas fa-circle fa-stack-2x"></i>
-                                                <i class="fas fa-calendar-alt fa-stack-1x"></i>
+                                                <i class="fas fa-thumbs-up fa-stack-1x"></i>
                                             </span>
                                         <div class="media-body">
-                                            <h4>Calendar Input</h4>
-                                            <p>Schedule your appointments, meetings and periodical evaluations using the
-                                                tools</p>
+                                            <h4>Feedback</h4>
+                                            <p>Check the reputation of sellers and see what other people have been saying about them</p>
                                         </div>
                                     </li>
+                                </ul>
+                                <ul class="list-unstyled li-space-lg">
                                     <li class="media">
                                             <span class="fa-stack">
                                                 <i class="fas fa-circle fa-stack-2x"></i>
-                                                <i class="fas fa-code fa-stack-1x"></i>
+                                                <i class="fas fa-eye fa-stack-1x"></i>
                                             </span>
                                         <div class="media-body">
-                                            <h4>Visual Editor</h4>
-                                            <p>Leno provides a well designed and ergonomic visual editor for you to edit
-                                                your notes</p>
-                                        </div>
-                                    </li>
-                                    <li class="media">
-                                            <span class="fa-stack">
-                                                <i class="fas fa-circle fa-stack-2x"></i>
-                                                <i class="far fa-gem fa-stack-1x"></i>
-                                            </span>
-                                        <div class="media-body">
-                                            <h4>Refined Options</h4>
-                                            <p>Each option packaged in the app's menus is provided in order to improve
-                                                you personally</p>
+                                            <h4>Watch List</h4>
+                                            <p>Easily add an item to your 'Watched Items' with a single tap</p>
                                         </div>
                                     </li>
                                 </ul>
@@ -319,9 +303,9 @@
                         </div> <!-- end of row -->
                     </div> <!-- end of container -->
                 </div> <!-- end of tab-pane -->
-                <!-- end of tab -->
+                <!-- end of tab Buy  -->
 
-                <!-- Tab -->
+                <!-- Sell Tab -->
                 <div class="tab-pane fade" id="tab-3" role="tabpanel" aria-labelledby="tab-3">
                     <div class="container">
                         <div class="row">
@@ -370,9 +354,8 @@
                                                 <i class="fas fa-calendar-alt fa-stack-1x"></i>
                                             </span>
                                         <div class="media-body">
-                                            <h4>Calendar Input</h4>
-                                            <p>Schedule your appointments, meetings and periodical evaluations using the
-                                                tools</p>
+                                            <h4>Feedback</h4>
+                                            <p>Check the reputation of potential buyers and see what other people have been saying about them</p>
                                         </div>
                                     </li>
                                     <li class="media">
