Started for-platform.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><!-- SEO Meta Tags -->
-    <meta name="description"
-          content="Leno is a mobile app landing page template made with HTML and Bootstrap to help you present mobile apps to the online audience and convince visitors to download from the app stores">
-    <meta name="author" content="Inovatik">
+    <meta name="Magpie Market"
+          content="Magpie Market is the first second hand market place for English speakers in Korea">
+    <meta name="ajsoftware" content="Magpie Market">
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
     <meta property="og:site_name" content=""><!-- website name -->
     <meta property="og:site" content=""><!-- website link -->
@@ -101,9 +101,9 @@
             <!-- end of col -->
         </div> <!-- end of row -->
         <div class="row justify-content-center">
-            <a class="btn-solid-lg" href="#your-link"><i class="fab fa-apple"></i>For Apple</a>
-            <a class="btn-solid-lg" href="#your-link"><i class="fab fa-google-play"></i>For Android</a>
-            <a class="btn-solid-lg" href="#your-link"><i class="fab fas fa-desktop"></i>For Desktop</a>
+            <a class="btn-solid-lg" href="./for-platform.html?platform=ios"><i class="fab fa-apple"></i>For Apple</a>
+            <a class="btn-solid-lg" href="./for-platform.html?platform=android"><i class="fab fa-google-play"></i>For Android</a>
+            <a class="btn-solid-lg" href="./for-platform.html?platform=desktop"><i class="fab fas fa-desktop"></i>For Desktop</a>
         </div>
     </div> <!-- end of container -->
 </header><!-- end of header --><!-- end of header --><!-- Testimonials -->
@@ -513,7 +513,7 @@
         </div> <!-- end of col -->
     </div> <!-- end of row -->
     <div class="row justify-content-center">
-        <div class="col-4 justify-content-center align-center">
+        <div class="col-3 justify-content-center align-center">
             <h2>iOS</h2>
             <i class="fab fa-apple large-icon"></i>
             <!--                <div class="counter" id="counter">-->
@@ -522,11 +522,11 @@
             <!--                    </div>-->
             <!--                </div>-->
         </div>
-        <div class="col-4 justify-content-center align-center">
+        <div class="col-3 justify-content-center align-center">
             <h2>Android</h2>
             <i class="fab fa-google-play large-icon"></i>
         </div>
-        <div class="col-4 justify-content-center align-center">
+        <div class="col-3 justify-content-center align-center">
             <h2>Desktop</h2>
             <i class="fab fas fa-desktop large-icon"></i>
         </div>
@@ -543,13 +543,13 @@
         <!-- Counter -->
         <div id="counter">
             <div class="row justify-content-center">
-                <div class="col-4 cell">
+                <div class="col-3 cell">
                     <div class="counter-value number-count" data-count="00">250</div>
                 </div>
-                <div class="col-4 cell">
+                <div class="col-3 cell">
                     <div class="counter-value number-count" data-count="00">250</div>
                 </div>
-                <div class="col-4 cell">
+                <div class="col-3 cell">
                     <div class="counter-value number-count" data-count="00">250</div>
                 </div>
             </div>
