--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Leno</a> -->
 
         <!-- Image Logo -->
-        <div class="navbar-brand logo-image"
+        <div class="navbar-brand logo-image" style="cursor: pointer"
              onclick="document.getElementById('navbar').scrollIntoView({behavior: 'smooth'})">
             <img src="images/magpie.svg" alt="alternative">
             <img src="images/magpie-name-logo-small.png">
